backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: neurphysw/backend-image:latest  # Docker Hub에 업로드한 백엔드 이미지
        ports:
        - containerPort: 8000
