frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: neurphysw/frontend-image:latest  # Docker Hub에서 업로드한 프론트엔드 이미지
        ports:
        - containerPort: 80
