backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000  # 노출 포트
      targetPort: 8000  # 컨테이너 내부의 포트
  type: ClusterIP
