frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80  # 노출 포트
      targetPort: 80  # 컨테이너 내부의 포트
  type: ClusterIP
